# dfshow

./: .gitignore  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  Makefile  Makefile.am  Makefile.in  README.md  README.rst  TRANSLATING.md  bootstrap  config.hin~  configure  configure.ac  make  sf
.github/: ISSUE_TEMPLATE.md
.github/workflows/: release.yml
autom4te.cache/: output.0  requests  traces.0  traces.1
conf/: dfshow.conf
doc/: sf.1  sf.1.html  sf.1.ronn  show.1  show.1.html  show.1.ronn
docs/source/: conf.py  dfshow.rst  index.rst  installation.rst  license.rst  requirements.txt  sf.rst  show.rst
examples/: dfshow.conf
man/: sf.1  sf.1.html  sf.1.ronn  show.1  show.1.html  show.1.ronn
misc/auto-completion/bash/: sf-completion.bash  show-completion.bash
misc/auto-completion/zsh/: _sf  _show
misc/donate/: bitcoin-address.txt
po/: LINGUAS  POTFILES.in  dfshow.pot  en_GB.po  fr.po
src/: .#common.c  .#common.h  .#functions.h  .#showfunctions.c  .#showmenus.h  colors.c  colors.h  common.c  common.h  customtypes.h  display.c  display.h  functions.c  functions.h  i18n.c  i18n.h  input.c  input.h  main.c  main.h  menu.c  menu.h  menus.c  menus.h  os_mswin.c  os_mswin.h  os_unix.c  os_unix.h  plugin.c  plugin.h  plugin_interface.c  plugin_interface.h  settings.c  settings.h  sf.c  sf.h  sffunctions.c  sffunctions.h  sfmenus.c  sfmenus.h  (+12 more)
src/plugins/: dummy.c  exec_pause.c  test.c
themes/: default  dos  hot-dog-stand  light  mac  monochrome  neutral  nt  ti
